slurm-388484.out
--------------------------------------------------------------
Begin Slurm Prologue Tue Jul 16 06:07:58 CDT 2024 1721128078
Job ID:		388484
Username:	l.peiwang
Partition:	tier2_gpu
End Slurm Prologue Tue Jul 16 06:07:58 CDT 2024 1721128078
--------------------------------------------------------------
/home/l.peiwang/liuenv/lib/python3.10/site-packages/nilearn/input_data/__init__.py:23: FutureWarning: The import path 'nilearn.input_data' is deprecated in version 0.9. Importing from 'nilearn.input_data' will be possible at least until release 0.13.0. Please import from 'nilearn.maskers' instead.
  warnings.warn(message, FutureWarning)
Traceback (most recent call last):
  File "/ceph/chpc/home-nfs/l.peiwang/Modality_Comparison_AD/base.py", line 3, in <module>
    from main import nested_crossvalidation_multi_kernel, nested_crossvalidation
  File "/ceph/chpc/home-nfs/l.peiwang/Modality_Comparison_AD/main.py", line 219
    confi_npv = compute_bootstrap_confi(all_predictions, all_y_test, lambda y_true, y_pred: confusion_matrix(y_true, y_pred)[1, 
                                                                                                                            ^
SyntaxError: '[' was never closed
--------------------------------------------------------------
Begin Slurm Epilogue Tue Jul 16 06:08:03 CDT 2024 1721128083
Name                : base_new
User                : l.peiwang
Partition           : tier2_gpu
Nodes               : gpu08
Cores               : 1
State               : COMPLETED
Submit              : 2024-07-16T06:07:57
Start               : 2024-07-16T06:07:57
End                 : 2024-07-16T06:08:01
Reserved Walltime   : 5-10:50:00
Used Walltime       :   00:00:04
Used CPU Time       :   00:00:01
% User (Computation): 84.29%
% System (I/O)      :  0.00%
Mem Reserved        : 100000M
Max Mem Used        : 0.00  (0.0)
Max Disk Write      : 0.00  (0.0)
Max Disk Read       : 0.00  (0.0)
Max-Mem-Used Node   : gpu08
Max-Disk-Write Node : gpu08
Max-Disk-Read Node  : gpu08
Tesla T4
Error: Unable to retrieve job statistics. Return: No data is available.
End Slurm Epilogue Tue Jul 16 06:08:03 CDT 2024 1721128083
--------------------------------------------------------------
